complete con imagenes y texto seccion 4

--- a/index.html
+++ b/index.html
@@ -18,30 +18,55 @@
 	</div>
 	<div class="row">
 		<section class="col-3 seccion2">
-			<h3>Lorem ipsum dolor sit amet</h3>
-			<h2>Tempore repellat in facere.</h2>
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-pig.png">
-			<p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 		</section>
 		<section class="col-3 seccion2">
-			<h3>Lorem ipsum dolor sit amet</h3>
-			<h2>Tempore repellat in facere.</h2>
-			<img src="img/n-pig.png">
-			<p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-butterfly.png">
+			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 		</section>
 		<section class="col-3 seccion2">
-			<h3>Lorem ipsum dolor sit amet</h3>
-			<h2>Tempore repellat in facere.</h2>
-			<img src="img/n-pig.png">
-			<p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-bigfish.png">
+			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 		</section>
 		<section class="col-3 seccion2">
-			<h3>Lorem ipsum dolor sit amet</h3>
-			<h2>Tempore repellat in facere.</h2>
-			<img src="img/n-pig.png">
-			<p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-crab.png">
+			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 		</section>
-		
+		<div class="row">
+			<section class="seccion3">
+			<h2 class="subtitulo2 text-center">Lorem ipsum dolor sit amet gol</h2>
+			</section>
+		</div>
+		<div class="row">
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-beetle.png">
+			</section>
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-fish2.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-collie.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-salamander.png">
+			</section>
+			
+		</div>
 	</div>
 
 	
