coloque el fondo, reemplace imagenes, coloque seccion 5 y di un poco de css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+<div class="fondo">
 	<div class="row">
 		<section class="seccion1 text-center">
 			<h3>Lorem ipsum dolor sit amet,</h3>
@@ -65,8 +66,72 @@
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-salamander.png">
 			</section>
-			
+
+				<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-wasp.png">
+			</section>
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-reptile.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-flea.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-puffer.png">
+			</section>
+
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-rabbit.png">
+			</section>
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-snake.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-fishfeet.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-cormorant.png">
+			</section>
+
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-fish3.png">
+			</section>
+			<section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-lobster.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-grasshopper.png">
+			</section><section class="col-3 seccion4">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-tortoise.png">
+			</section>
 		</div>
+		<div class="row">
+			<section class="seccion5">
+				<img class="logo" src="img/deranged.png">
+				<p class="textofinal text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quibusdam esse corporis, ex delectus<br>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore quae sint,</p>
+				</section>
+		</div>
+	</div>
 	</div>
 
 	
