arregle los cuadros

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 	<link rel="stylesheet" href="css/grid.css">
 
 </head>
-<body>
-<div class="fondo">
+<body class="container fondo">
 	<div class="row">
 		<section class="seccion1 text-center">
 			<h3>Lorem ipsum dolor sit amet,</h3>
@@ -19,28 +18,36 @@
 	</div>
 	<div class="row">
 		<section class="col-3 seccion2">
+		<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-pig.png">
 			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			</div>
 		</section>
 		<section class="col-3 seccion2">
+		<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-butterfly.png">
 			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			</div>
 		</section>
 		<section class="col-3 seccion2">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-bigfish.png">
 			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			</div>
 		</section>
 		<section class="col-3 seccion2">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-crab.png">
 			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			</div>
 		</section>
 		<div class="row">
 			<section class="seccion3">
@@ -49,79 +56,131 @@
 		</div>
 		<div class="row">
 			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-beetle.png">
+			</div>
 			</section>
+
 			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-fish2.png">
-			</section><section class="col-3 seccion4">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-collie.png">
-			</section><section class="col-3 seccion4">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-salamander.png">
+			</div>
 			</section>
 
-				<section class="col-3 seccion4">
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-wasp.png">
+			</div>
 			</section>
+
 			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-reptile.png">
-			</section><section class="col-3 seccion4">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-flea.png">
-			</section><section class="col-3 seccion4">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-puffer.png">
+			</div>
 			</section>
 
 			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-rabbit.png">
-			</section>
-			<section class="col-3 seccion4">
-			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
-			<h2 class="text-center">Tempore repellat in facere.</h2>
-			<img src="img/n-snake.png">
-			</section><section class="col-3 seccion4">
-			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
-			<h2 class="text-center">Tempore repellat in facere.</h2>
-			<img src="img/n-fishfeet.png">
-			</section><section class="col-3 seccion4">
-			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
-			<h2 class="text-center">Tempore repellat in facere.</h2>
-			<img src="img/n-cormorant.png">
+			</div>
 			</section>
 
 			<section class="col-3 seccion4">
+			<div class="cuadro">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-snake.png">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-fishfeet.png">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
+			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
+			<h2 class="text-center">Tempore repellat in facere.</h2>
+			<img src="img/n-cormorant.png">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-fish3.png">
+			</div>
 			</section>
+
 			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-lobster.png">
-			</section><section class="col-3 seccion4">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-grasshopper.png">
-			</section><section class="col-3 seccion4">
+			</div>
+			</section>
+
+			<section class="col-3 seccion4">
+			<div class="cuadro">
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-tortoise.png">
+			</div>
 			</section>
 		</div>
 		<div class="row">
@@ -131,7 +190,7 @@
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore quae sint,</p>
 				</section>
 		</div>
-	</div>
+	
 	</div>
 
 	
