puse letras tipo capitulares

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-pig.png">
-			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<p class="text-izq"> Horem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 			</div>
 		</section>
 		<section class="col-3 seccion2">
@@ -30,7 +30,7 @@
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-butterfly.png">
-			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<p class="text-izq"> Sorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 			</div>
 		</section>
 		<section class="col-3 seccion2">
@@ -46,7 +46,7 @@
 			<h3 class="text-center">Lorem ipsum dolor sit amet</h3>
 			<h2 class="text-center">Tempore repellat in facere.</h2>
 			<img src="img/n-crab.png">
-			<p class="text-izq">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
+			<p class="text-izq"> Orem ipsum dolor sit amet, consectetur<br> adipisicing elit. Eum totam deleniti, esse<br> error dolore fugiat, ut quod velit, debitis quos placeat.<br> aspernatur amet voluptatum impedit, porro adipisci?</p>
 			</div>
 		</section>
 		<div class="row">
