puse color a lor primeros renglones

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</section>
 		<div class="row">
 			<section class="seccion3">
-			<h2 class="subtitulo2 text-center">Lorem ipsum dolor sit amet gol</h2>
+			<h2 class="subtitulo2 text-center">LOREM IPSUM DOLOR SIT AMET GOL</h2>
 			</section>
 		</div>
 		<div class="row">
@@ -186,8 +186,8 @@
 		<div class="row">
 			<section class="seccion5">
 				<img class="logo" src="img/deranged.png">
-				<p class="textofinal text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quibusdam esse corporis, ex delectus<br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore quae sint,</p>
+				<h4 class="textofinal text-center">© Derechos Reservados 2001-2018 Majo Mexa Producciones Ceamic Todos los Derechos Reservados.<br>
+				© Derechos Reservados 2001-2018 EspacioLogopedico.com Derechos de Contenido Reservados</h4>
 				</section>
 		</div>
 	
